feat: Check email availability
